# Cortex-MCP

./: .env.example  .gitignore  BRANCH.md  LICENSE  README.md  config.py  issues-table-design.md  main.py  pyproject.toml  requirements-project-changes.md  tools.json
dev/2026-05-07_migration/: MIGRATION_PROJECT_TABLE.md  MIGRATION_TODO.md  migrate_projects.py
tools/: __init__.py  add.py  fetch_content.py  files.py  md_to_pdf.py  run_command.py  sqlite_store.py  sqlite_store_backup.py  today.py  web_research.py  web_search.py
